2013-01-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-read-group-1): Protect against not being
	able to find the article, which can happen in debbugs groups,
	apparently.

2013-01-16  Glenn Morris  <rgm@gnu.org>

	* smiley.el (smiley-style): Make the file loadable in batch mode.

2013-01-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-keepalive): Don't throw an error if there's no more
	imap process running.

2013-01-14  Julien Danjou  <julien@danjou.info>

	* gnus-sum.el (gnus-summary-from-or-to-or-newsgroups):
	Compare addresses against addresses, not against the full From field.

2013-01-13  Richard Stallman  <rms@gnu.org>

	* message.el (message-forward-make-body-mime): New args BEG, END
	specify what part of FORWARD-BUFFER to use.  Do the work directly
	instead of calling `mml-insert-buffer'.

2013-01-11  Aaron S. Hawley  <Aaron.Hawley@vtinfo.com>

	* gnus-start.el (gnus-check-new-newsgroups): Fix ambiguous doc string
	cross-reference(s).

	* gnus-sum.el (gnus-summary-newsgroup-prefix): Fix ambiguous doc string
	cross-reference(s).

2013-01-11  Dmitry Antipov  <dmantipov@yandex.ru>

	* gnus-art.el (gnus-mime-display-security): Use point-min-marker
	and point-max-marker.
	* gnus-async.el (gnus-async-article-callback): Use point-max-marker.

2013-01-11  Julien Danjou  <julien@danjou.info>

	* color.el (color-rgb-to-hsv): Fix conversion computing in case min and
	max are almost equal. Also return the correct value for V which is
	already between 0 and 1.

2013-01-10  Uwe Brauer  <oub@mat.ucm.es>  (tiny change)

	* mml-smime.el (mml-smime-encrypt-to-self): New user option analogous
	to mml2015-encrypt-to-self.
	(mml-smime-epg-encrypt): Respect mml-smime-encrypt-to-self.

2013-01-09  Daiki Ueno  <ueno@gnu.org>

	* mml-smime.el (epg-sub-key-fingerprint): Autoload for
	mml-smime-epg-find-usable-secret-key.

2013-01-08  Glenn Morris  <rgm@gnu.org>

	* mml-smime.el (mml-smime-sign-with-sender): Add :version.
