@@ -1,3 +1,7 @@
+2013-01-30  Christopher Schmidt  <christopher@ch.ristopher.com>
+
+	* mm-decode.el (mm-save-part): Handle invalid read-file-name results.
+
 2013-01-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-sum.el (gnus-summary-read-group-1): Protect against not being
